Fix flex alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,18 +1,28 @@
-/* The wrapping div that the body will be in. */
-.container {    
-    height: 100%;
-
+@mixin display-flex() {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
+}
 
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    -webkit-box-align: center;
-    align-items: center;
+@mixin flex-align($where) {
+    -ms-flex-align: $where;
+    -webkit-align-items: $where;
+    -webkit-box-align: $where;
+    align-items: $where;
+}
 
-    -webkit-justify-content: center;
-    justify-content: center;
+@mixin justify-content($where) {
+    -webkit-justify-content: $where;
+    justify-content: $where;
+}
+
+/* The wrapping div that the body will be in. */
+.container {
+    height: 100%;
+
+    @include display-flex();
+    @include flex-align(center);
+    @include justify-content(center);
 }
 
 $img-width: 400px;
@@ -82,8 +92,14 @@ $img-width-front: $img-width * 0.5;
 }
 
 /* Make sure the content shows up full screen on mobile. */
-@media only screen and (max-width: 800px) {
+@media all and (max-width: 800px) {
     .container, .center, .column {
         width: 100%;
+    }
+
+    .project-text, .project-img {
+	color: red;
+    	@include justify-content(center);
+	/*text-align: center;*/
     }
 }
